<resources>
    <string name="app_name">To-do list</string>
    <string name="menu">Menu</string>
    <string name="showFAB">showFAB</string>
    <string name="add">add</string>
    <string name="newTask">New task</string>
    <string name="clear">Clear the list</string>
    <string name="settings">Setting</string>
    <string name="save">Save it</string>
    <string name="ok">Ok</string>
    <string name="help">Help</string>
    <string name="editTask">Edit your task</string> editTask
    <string name="hint_edit">Edit</string> hint_edit
    <string name="messageDialog">Do you really want to clear the list?</string>
    <string name="enter">Enter</string>
    <string name="toRecycler">To Recycler</string>
    what should be done?
    <string name="hint">what should be done?</string>

    <string name="close">Cancel</string>
    <string name="add_task">add task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>